# deception-probes

./: .gitignore  CLAUDE.md  README.md  pyproject.toml  requirements.txt
docs/: HPC.md
results/runs/2026-06-28T19-53-52Z_sycophancy_mms_9e09e4a_JACKPC/: meta.json
results/runs/2026-06-28T20-15-28Z_sycophancy_lr_8719e35_JACKPC/: meta.json
results/runs/2026-06-28T20-27-55Z_sycophancy_mms_1b8fcab_JACKPC/: meta.json
results/runs/2026-06-28T21-30-50Z_sycophancy_mms_std_e3b80f4_JACKPC/: meta.json
results/runs/2026-06-28T22-11-06Z_sycophancy_lr_b5c3232_p0237/: meta.json
results/runs/2026-06-29T00-25-17Z_sycophancy_lr_3da7279_p0329/: meta.json
results/runs/2026-06-30T01-44-39Z_sycophancy_lr_14fa1e3_p0340/: meta.json
results/runs/2026-06-30T01-57-43Z_sycophancy_lr_683bea3_p0340/: meta.json
results/runs/2026-06-30T02-18-31Z_permctrl_lr_683bea3_p0340/: meta.json
results/runs/2026-07-01T01-27-44Z_sycophancy_lr_683bea3_p0352/: meta.json
scripts/: compare.py  train_one.py
src/dprobe/: __init__.py  activations.py  config.py  evaluate.py  plotting.py  probes.py  runlog.py
src/dprobe/data/: __init__.py  base.py  omission.py  sandbagging.py  sycophancy.py
tests/: test_smoke.py
