[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "dprobe"
version = "0.1.0"
requires-python = ">=3.9"
dependencies = [
    "torch",
    "transformers",
    "scikit-learn",
    "numpy<2",
    "matplotlib",
]

[project.optional-dependencies]
dev = ["pytest"]

[tool.setuptools.packages.find]
where = ["src"]
